🎂🗽 Checkpoint ./Solicitar.html:58483456/5:58517880/35 ./script.js:58483462/121

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -43,25 +43,25 @@
 
       <form id="forms-user">
         <section>
-          <label>Nome: </label><input type="text" name="Nome" value="nome" id="idNomeUser"/>
+          <label>Nome: </label><input type="text" name="Nome" value="" id="idNomeUser"/>
         </section>
         <section>
-          <label>Data de nascimento: </label><input type="date" value="data" id="idDataNasc"/>
+          <label>Data de nascimento: </label><input type="date" value="" id="idDataNasc"/>
         </section>
 
         <section>
-          <label>E-mail: </label><input type="text" name="Email" value="email" id="idEmail"/>
+          <label>E-mail: </label><input type="text" name="Email" value="" id="idEmail"/>
         </section>
         <section>
-          <label>CPF ou RG: </label><input type="text" name="CPF ou RG" value="CPF" id="idCpfUser"/>
+          <label>CPF ou RG: </label><input type="text" name="CPF ou RG" value="" id="idCpfUser"/>
         </section>
         <section>
           <label>Data da consulta: </label
-          ><input type="date" name="Data de Consulta" value="dataConsul" id="idDataConsul"/>
+          ><input type="date" name="Data de Consulta" value="" id="idDataConsul"/>
         </section>
         <section>
           <label>Descrição ou sintomas: </label
-          ><input type="text" name="Sintomas" value="sintomas" id="idSintomas"/>
+          ><input type="text" name="Sintomas" value="" id="idSintomas"/>
         </section>
         <button class="enviar-button" onclick="enviarDados()">Enviar</button>
       </form>
