--- a/solicitacoes.html
+++ b/solicitacoes.html
@@ -36,7 +36,7 @@
       </div>
     </header>
     <conteiner>
-      <button onclick="obterDados()">
+      <button class="button-agendamento" onclick="obterDados()">
         <a>Mostrar agendamentos</a>
       </button>
       <div id="listaUsuarios">
