🍫👚 Checkpoint ./style.css:58483456/143 ./Solicitar.html:58483456/39

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -51,7 +51,7 @@
           ><input type="date" name="Data de Consulta" id="idDataConsul"/>
           <label>Descrição ou sintomas: </label
           ><input type="text" name="Sintomas" value="" id="idSintomas"/>
-          <input type="button" class="enviar-button" onclick="enviarDados()" value="Enviar">
+          <input type="button" class="enviar-solicitar" onclick="enviarDados()" value="Enviar">
       </form>
     </div>
     <section class="img-solicitar">
