🍡🐮 Checkpoint ./solicitacoes.html:58483456/2987 ./style.css:58483456/21816 ./script.js:58483456/3755 ./login.html:58483456/9418 ./cadastro.html:58483456/13343 ./SolicitarVacinas.html:58483456/5512 ./Solicitar.html:58483456/4615 ./Sobre.html:58483456/5110

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -15,11 +15,13 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017">
+        <img
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017"
+        />
       </nav>
       <div class="nomes-links">
-          <div class="dropdown">
-        <a href="#">Clínica</a>
+        <div class="dropdown">
+          <a href="#">Clínica</a>
           <div class="dropdown-content">
             <a href="index.html"> Voltar a página inicial</a>
             <a href="Sobre.html"> Sobre Nós</a>
@@ -35,7 +37,7 @@
         <a href="login.html">Login/Cadastro</a>
       </div>
     </header>
-    
+
     <!--área de cadastro-->
     <div class="solicitar-conteiner">
       <div>
@@ -43,15 +45,22 @@
       </div>
 
       <form id="formUser">
-          <label>Nome: </label><input type="text" name="Nome" id="idNomeUser"/>
-          <label>Data de nascimento: </label><input type="date" id="idDataNasc"/>
-          <label>E-mail: </label><input type="text" name="Email" id="idEmail"/>
-          <label>CPF ou RG: </label><input type="text" name="CPF ou RG" id="idCpfUser"/>
-          <label>Data da consulta: </label
-          ><input type="date" name="Data de Consulta" id="idDataConsul"/>
-          <label>Descrição ou sintomas: </label
-          ><input type="text" name="Sintomas" value="" id="idSintomas"/>
-          <input type="button" class="enviar-solicitar" onclick="enviarDados()" value="Enviar">
+        <label>Nome: </label><input type="text" name="Nome" id="idNomeUser" />
+        <label>Data de nascimento: </label
+        ><input type="date" id="idDataNasc" /> <label>E-mail: </label
+        ><input type="text" name="Email" id="idEmail" />
+        <label>CPF ou RG: </label
+        ><input type="text" name="CPF ou RG" id="idCpfUser" />
+        <label>Data da consulta: </label
+        ><input type="date" name="Data de Consulta" id="idDataConsul" />
+        <label>Descrição ou sintomas: </label
+        ><input type="text" name="Sintomas" value="" id="idSintomas" />
+        <input
+          type="button"
+          class="enviar-solicitar"
+          onclick="enviarDados()"
+          value="Enviar"
+        />
       </form>
     </div>
     <section class="img-solicitar">
