--- a/login.html
+++ b/login.html
@@ -14,9 +14,11 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017">
+        <img
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017"
+        />
       </nav>
-      
+
       <div class="nomes-links">
         <div class="dropdown">
           <a href="#">Clínica</a>
@@ -52,14 +54,11 @@
           />
         </section>
         <section>
-          <input
-            type="password"
-            name="senha"
-            id="senha"
-            placeholder="Senha"
-          />
+          <input type="password" name="senha" id="senha" placeholder="Senha" />
         </section>
-        <button class="enviar-button"><a href="solicitacoes.html">Login</a></button>
+        <button class="enviar-button">
+          <a href="solicitacoes.html">Login</a>
+        </button>
       </form>
 
       <div class="link-cadastro">
