--- a/SolicitarVacinas.html
+++ b/SolicitarVacinas.html
@@ -14,7 +14,9 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017">
+        <img
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017"
+        />
       </nav>
       <div class="nomes-links">
         <div class="dropdown">
