--- a/cadastro.html
+++ b/cadastro.html
@@ -14,7 +14,9 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017">
+        <img
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017"
+        />
       </nav>
       <div class="nomes-links">
         <div class="dropdown">
@@ -91,17 +93,12 @@
 
         <section>
           <label>E-mail: </label
-          ><input type="email" name="email" id="email" required/>
+          ><input type="email" name="email" id="email" required />
         </section>
 
         <section>
           <label>Telefone: </label
-          ><input
-            type="tel"
-            name="telefone"
-            id="telefone-cadastro"
-            required
-          />
+          ><input type="tel" name="telefone" id="telefone-cadastro" required />
         </section>
 
         <section>
