--- a/solicitacoes.html
+++ b/solicitacoes.html
@@ -15,7 +15,9 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017">
+        <img
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017"
+        />
       </nav>
       <div class="nomes-links">
         <div class="dropdown">
@@ -35,7 +37,7 @@
         <a href="login.html">Login/Cadastro</a>
       </div>
     </header>
-    
+
     <div class="container-button">
       <button class="button-agendamento" onclick="obterDados()">
         <a>Mostrar agendamentos</a>
@@ -43,8 +45,7 @@
     </div>
 
     <conteiner>
-      <div id="listaUsuarios">
-      </div>
+      <div id="listaUsuarios"></div>
     </conteiner>
   </body>
 </html>
