🌑🏯 Checkpoint ./style.css:58483456/299 ./solicitacoes.html:58483456/72

--- a/solicitacoes.html
+++ b/solicitacoes.html
@@ -44,8 +44,9 @@
       </button>
     </div>
 
-    <conteiner>
+    <div class="container-solicitacoes">
       <div id="listaUsuarios"></div>
-    </conteiner>
+    </div>
+    
   </body>
 </html>
