--- a/Solicitar.html
+++ b/Solicitar.html
@@ -13,17 +13,17 @@
   </head>
   <body>
     <!--navbar-->
-    <header>
+        <header>
       <nav class="nav-bar">
         <img
-          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697596093017"
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/Group%202%20(11).png?v=1697596093017"
         />
       </nav>
+
       <div class="nomes-links">
         <div class="dropdown">
           <a href="#">Clínica</a>
           <div class="dropdown-content">
-            <a href="index.html"> Voltar a página inicial</a>
             <a href="Sobre.html"> Sobre Nós</a>
           </div>
         </div>
