--- a/login.html
+++ b/login.html
@@ -57,8 +57,8 @@
           <input type="password" name="senha" id="senha" placeholder="Senha" />
         </section>
         <button class="login-button">
-          <a  href="solicitacoes.html">ogin<</a>
-        /button>
+          <a  href="solicitacoes.html">Login</a>
+        </button>
       </form>
 
       <div class="link-cadastro">
