🌿🤗 Checkpoint ./style.css:58483452/77:58483462/568 ./Sobre.html:58483456/30 ./Solicitar.html:58483456/9 ./SolicitarVacinas.html:58483456/9 ./index.html:58483456/9 ./login.html:58483456/27 ./solicitacoes.html:58483456/15

--- a/Sobre.html
+++ b/Sobre.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro - Clínica</title>
+    <title>Sobre Nós - Clínica</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -33,7 +33,7 @@
             <a href="SolicitarVacinas.html"> Solicitar Vacina</a>
           </div>
         </div>
-        <a href="login.html">Login/Cadastro</a>
+        <a href="login.html">Login</a>
       </div>
     </header>
     <conteiner>
