--- a/login.html
+++ b/login.html
@@ -61,13 +61,13 @@
         </button>
       </form>
 
-      <div class="link-cadastro">
+      <!-- <div class="link-cadastro">
         <p>
           Não possui uma conta? Cadastre-se<a href="cadastro.html">
             clicando aqui.</a
           >
         </p>
-      </div>
+      </div> -->
     </div>
 
     <!--footer-->
