--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="SolicitarVacinas.html"> Solicitar Vacina</a>
           </div>
         </div>
-        <a href="login.html">Login/Cadastro</a>
+        <a href="login.html">Login</a>
       </div>
     </header>
     <!--<div class="content"></div>-->
