--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
             <a href="SolicitarVacinas.html"> Solicitar Vacina</a>
           </div>
         </div>
-        <a href="login.html">Login/Cadastro</a>
+        <a href="login.html">Login</a>
       </div>
     </header>
 
