🍨👁 Checkpoint ./script.js:58483462/300 ./index.html:58483456/6 ./style.css:58483452/24

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
         <div class="container">
           <div class="footer-section1">
-            <h2 class="links-uteis">links uteis</h2>
+            <h2 class="links-uteis">Links Ùteis</h2>
             <ul>
               <li>
                 <img
