🌼🍲 Checkpoint ./login.html:58483456/41

--- a/login.html
+++ b/login.html
@@ -51,10 +51,11 @@
             name="identificador"
             id="identificador"
             placeholder="Identificador"
+            required
           />
         </section>
         <section>
-          <input type="password" name="senha" id="senha" placeholder="Senha" />
+          <input type="password" name="senha" id="senha" placeholder="Senha" required/>
         </section>
         <button class="login-button">
           <a  href="solicitacoes.html">Login</a>
