🚌🔨 Checkpoint ./script.js:58483462/628 ./login.html:58483462/106

--- a/login.html
+++ b/login.html
@@ -58,8 +58,8 @@
         <section>
           <input type="password" name="senha" id="senha" placeholder="Senha" required/>
         </section>
-        <button class="login-button" onclick="autenticar()">
-          <a>Login</a>
+        <button class="login-button">
+          <a href="solicitacoes.html">Login</a>
         </button>
       </form>
 
